# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.455 2007-08-23 22:44:28 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

2.2.3 (2007/??/??)
 - (2007/08/24) Fixed bug# 2214 - .opm Package can not handle &lt;, &gt; and
    &amp; in .sopm files.
 - (2007/08/22) Improved Agent Notifications. Salutation of notfication
    recipient is now using <OTRS_UserFirstname> and <OTRS_UserLastname> instead
    of <OTRS_OWNER_UserFirstname> or <OTRS_OWNER_UserLastname>.
 - (2007/08/22) Fixed bug# 2203 - OTRS will not create/verify correct pgp
    signs if utf8 is used.
 - (2007/08/22) Fixed bug# 2202 - Kernel::System::Email::SMTP is sending
    "localhost.localdomain" in smtp hello, some server rejecting this ("Host
    not found").
 - (2007/08/21) Fixed bug# 2024 - Problem with agent authentication via LDAP
    with ADS-Groups and content of DN like "Some\, Name".
 - (2007/08/20) Fixed bug# 2094 and 2143 - 'Got no MainObject' warning in
    Kernel/System/Crypt.pm
 - (2007/08/20) Fixed bug# 2192 - Useless fragments of old escalation mechanism
    produces errors.
 - (2007/08/17) Fixed bug# 1908 - Removed duplicate history entry for ticket
    subscribe action.
 - (2007/08/16) Fixed bug# 1492 - Fixed typo in Kernel/Language.pm.
 - (2007/08/10) Fixed bug# 2160 - 0 was ignored in database insert by package
    building.
 - (2007/08/10) Fixed bug# 2156 - External customer database is not working,
    if it's configured the following error message appears
    ("Got no MainObject in Kernel/System/DB.pm line 85").
 - (2007/08/10) Fixed bug# 2155 - Std-Attachments are not usable in agent
    ticket compose screen (no std attachments are shown in compose screen).
 - (2007/08/07) Fixed bug# 2118 - Fixed typo in german translation file (